--- a/jupyter/jupyterhub_systemd.conf
+++ b/jupyter/jupyterhub_systemd.conf
@@ -1,17 +1,16 @@
 # jupyter systemd
+## /etc/systemd/system/jupyter.service
 [Unit]
 Description=Jupyter
 After=
 Wants=
 
-StartLimitIntervalSec=500
-StartLimitBurst=5
-
 [Service]
-Restart=on-failure
-RestartSec=5s
-
-ExecStart=/path/to/daemon
+Environment="PATH=/usr/local/miniconda2/condabin...."
+Type=oneshot
+ExecStart=/home/modules/jupyter/scripts/start_jupyterhub.sh
+ExecStop=/home/modules/jupyter/scripts/stop_jupyterhub.sh
+RemainAfterExit=yes
 
 [Install]
 WantedBy=multi-user.target
