feature-jupyter: after install, make jupyter as system service

--- a/jupyter/jupyterhub_systemd.conf
+++ b/jupyter/jupyterhub_systemd.conf
@@ -6,10 +6,10 @@ After=
 Wants=
 
 [Service]
-Environment="PATH=/usr/local/miniconda2/condabin...."
+Environment="PATH={PATH}"
 Type=oneshot
-ExecStart=/home/modules/jupyter/scripts/start_jupyterhub.sh
-ExecStop=/home/modules/jupyter/scripts/stop_jupyterhub.sh
+ExecStart={JUPUTER_HOME}/scripts/start_jupyterhub.sh
+ExecStop={JUPUTER_HOME}/scripts/stop_jupyterhub.sh
 RemainAfterExit=yes
 
 [Install]
