fix-jupyter: fix jupyterlab and notebook cannot be distinguished problem

--- a/jupyter/jupyterhub_systemd.conf
+++ b/jupyter/jupyterhub_systemd.conf
@@ -7,6 +7,7 @@ Wants=
 
 [Service]
 Environment="PATH={PATH}"
+Environment="JUPYTERHUB_SINGLEUSER_APP={JUPYTERHUB_SINGLEUSER_APP}"
 Type=oneshot
 ExecStart={JUPUTER_HOME}/scripts/start_jupyterhub.sh
 ExecStop={JUPUTER_HOME}/scripts/stop_jupyterhub.sh
